@@ -19,7 +19,7 @@
 #
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 #
-# $Id: hwdetect.in,v 1.30 2003/11/01 08:19:24 jaco Exp $
+# $Id: hwdetect.in,v 1.31 2003/11/01 09:15:43 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -73,6 +73,7 @@ my $ownprocusb  = 1;
 my $haveswap    = 0;
 my $haveusb     = 0;
 my $havepcmcia  = 0;
+my $kernel_ver  = qx(uname -r);
 
 sub rmws {
 	my ($str) = @_;
@@ -454,6 +455,20 @@ sub hwdetect_getvideo {
 		$probed_card = $card unless ($probed_card); # one card only :(
 		print_hash($card) if ($debug);
 	}
+	if ($probed_card->{Driver2} eq 'nvidia' &&
+	    -e "/usr/X11R6/lib/modules/drivers/nvidia_drv.o" &&
+	    -e "/usr/X11R6/lib/modules/extensions/libglx.so" &&
+	    -e "/lib/modules/$kernel_ver/kernel/drivers/char/nvidia.o.gz") {
+		$probed_card->{Driver} = 'nvidia';
+		$probed_card->{DRI_GLX_SPECIAL} = 1;
+		modules::add_alias("/dev/nvidia*", "nvidia") unless ($probe);
+		print "modules::add_alias('/dev/nvidia*', 'nvidia')\n" if ($debug);
+	}
+	#elsif ($probed_card->{Driver2} eq 'fglrx' &&
+	#       -e "/usr/X11R6/lib/modules/dri/fglrx_dri.so" &&
+	#       -e "/usr/X11R6/lib/modules/drivers/fglrx_drv.o") {
+	#	$proved_card->{Driver} = 'fglrx';
+	#}
 	$probed_card;
 }
 
